--- a/webapp-v2/webapp/templates/artist.html
+++ b/webapp-v2/webapp/templates/artist.html
@@ -4,12 +4,12 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3>Albums by {{ artist.name }}</h3>
+      <h3>Albums by {{ artist_name }}</h3>
       <ul class="list-group">
         {% for album in albums %}
           <li class="list-group-item">
             <span class="badge badge-secondary">{{ album.year }}</span>
-            <span class="ml-2"><a href="/album/{{ album.id }}">{{ album.title }}</a></span>
+            <span class="ml-2"><a href="/artist/{{ album.artist_name }}/album/{{ album.id }}">{{ album.title }}</a></span>
             <span class="ml-2"><small class="text-muted">{{ album.format }}</small></span>
             </li>
         {% endfor %}
