--- a/webapp-v2/webapp/templates/home.html
+++ b/webapp-v2/webapp/templates/home.html
@@ -24,8 +24,8 @@
           </a>
           <div class="card-body">
             <span class="card-text"><small>by <a
-                  href="/artist/{{ album.artist.id }}">{{ album.artist.name }}</a></small></span><br>
-            <a href="/album/{{ album.id }}">
+                  href="/artist/{{ album.artist_name }}">{{ album.artist_name }}</a></small></span><br>
+            <a href="/artist/{{ album.artist_name }}/album/{{ album.id }}">
               <span class="card-text">{{ album.title }}</small></span><br>
             </a>
             <span class="card-text"><small>{{album.year }} - {{album.format}}</small></span><br>
