--- a/webapp-v2/webapp/templates/artist.html
+++ b/webapp-v2/webapp/templates/artist.html
@@ -8,7 +8,7 @@
       <ul class="list-group">
         {% for album in albums %}
           <li class="list-group-item">
-            <span class="badge badge-secondary">{{ album.year }}</span>
+            <img style="width: 40px; margin-right: 10px" src="{{ album.album_art }}" alt="Album art for {{ album.title }}" onerror="this.src='/static/img/no-albumart.svg';">
             <span class="ml-2"><a href="/artist/{{ album.artist_name }}/album/{{ album.id }}">{{ album.title }}</a></span>
             <span class="ml-2"><small class="text-muted">{{ album.format }}</small></span>
             </li>
