--- a/webapp-v3/webapp/templates/account.html
+++ b/webapp-v3/webapp/templates/account.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       
-        <form method="POST" enctype="multipart/form-data">
+        <form method="POST" enctype="multipart/form-data" autocomplete="off">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
