--- a/webapp-v2/webapp/templates/login.html
+++ b/webapp-v2/webapp/templates/login.html
@@ -5,7 +5,7 @@
 
     <div class="col-sm-5">
 
-      <form method="POST">
+      <form method="POST" autocomplete="off">
         {{ form.hidden_tag() }}
         
         <div class="card">
