--- a/webapp-v2/webapp/templates/search.html
+++ b/webapp-v2/webapp/templates/search.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <form id="search" method="get" action="/results">
+      <form id="search" method="get" action="/results" autocomplete="off">
         <div class="input-group mt-3 mb-3">
           <input type="text" class="form-control" id="term" name="term" required placeholder="Artist, album, or track" value="{{ term }}">
           <div class="input-group-append">
