--- a/webapp-v3/webapp/templates/register.html
+++ b/webapp-v3/webapp/templates/register.html
@@ -6,7 +6,7 @@
             
     <div class="col-sm-5">
     
-      <form method="POST">
+      <form method="POST" autocomplete="off">
         {{ form.hidden_tag() }}
         
         <div class="card">
