--- a/webapp-v3/webapp/templates/results.html
+++ b/webapp-v3/webapp/templates/results.html
@@ -27,7 +27,7 @@
           </a>
           <div class="card-body">
             <span class="card-text"><small>by <a
-                  href="/artist/{{ album.artist.id }}">{{ album.artist.name }}</a></small></span><br>
+                  href="/artist/{{ album.artist_id }}">{{ album.artist.name }}</a></small></span><br>
             <a href="/album/{{ album.id }}">
               <span class="card-text">{{ album.title }}</small></span><br>
             </a>
