--- a/webapp-v3/webapp/templates/artist-results.html
+++ b/webapp-v3/webapp/templates/artist-results.html
@@ -5,17 +5,33 @@
   <div class="container">
     <h1>Search Results for artist: {{ term }}</h1>
 
-    {% if artists|length > 0 %}
+    {% if albums|length > 0 %}
     <div class="row">
+      {% for album in albums %}
       <div class="col-md-4">
-        <ul class="list-group">
-          {% for artist in artists %}
-          <li class="list-group-item">
-            <a href="/artist/{{ artist.id }}">{{ artist.name }}</a>
-          </li>
-          {% endfor %}
-        </ul>
+        <div class="card mb-4 shadow-sm">
+          <a href="/album/{{ album.id }}">
+            <img class="bd-placeholder-img card-img-top" src="{{ album.album_art }}"
+              alt="Album art for {{ album.title }}" onerror="this.src='/static/img/no-albumart.svg';" />
+          </a>
+          <div class="card-body">
+            <span class="card-text"><small>by <a
+                  href="/artist/{{ album.artist_id }}">{{ album.artist.name }}</a></small></span><br>
+            <a href="/album/{{ album.id }}">
+              <span class="card-text">{{ album.title }}</small></span><br>
+            </a>
+            <span class="card-text"><small>{{album.year }} - {{album.format}}</small></span><br>
+            <span class="card-text">{{ "$%.2f"|format(album.price) }}</span>
+            <div class="d-flex justify-content-between align-items-center mt-2">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-primary add-to-cart">Add to cart</button>
+              </div>
+              <small class="text-muted">★★★★★</small>
+            </div>
+          </div>
+        </div>
       </div>
+      {% endfor %}
     </div>
     {% else %}
     <div class="row">
